# bilidown

./: README.md  build.bat  debug.bat  main.py  pyproject.toml  run  run.bat  run.sh
bilidown/: __init__.py  __main__.py  aiodown.py  api.py  app.py  cli.py  config.py  consts.py  download.py  log.py  login.py  path.py  query.py  request.py  rest.py  tools.py  utils.py  wbi.py
client/: README.md  index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.vue  main.ts
client/src/api/: index.ts
client/src/assets/: main.css
client/src/components/: VideoItem.vue
client/src/router/: index.ts
client/src/types/: index.ts
client/src/views/: DownloadView.vue  HomeView.vue  QueryView.vue
