[tool.poetry]
name = "bilidown"
version = "0.1.0"
description = ""
authors = ["Jason Swift <anemele@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
qrcode = "^7.4.2"
requests = "^2.32.3"
fake-useragent = "^1.5.1"
aiohttp = "^3.10.0"
aiofiles = "^24.1.0"
mashumaro = {extras = ["orjson"], version = "^3.13.1"}
orjson = "^3.10.7"
rich = "^13.8.0"
flask = "^3.0.3"
waitress = "^3.0.0"
flask-cors = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
